[FIX] Restore readability of installer left-hand menu

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1763,8 +1763,8 @@ td.numeric {
   text-align: right;
   padding-right: 1px; }
 
-/*	Chrome & safari do not break urls or filenames at all. This causes
- serous display issues within tables with long urls/filenames.*/
+/* Chrome & safari do not break urls or filenames at all. This causes
+ serious display issues within tables with long urls/filenames.*/
 td.url {
   word-break: break-all; }
 
@@ -4959,25 +4959,25 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
     right: 1em; }
   #tiki-installer .menus {
     margin-top: 5em; }
-    #tiki-installer .menus .menu {
-      color: white;
-      margin-top: 1em; }
+  #tiki-installer .menus .menu {
+    color: white;
+    margin-top: 1em; }
   #tiki-installer ol.nav {
     list-style-type: decimal;
     list-style-position: outside;
     margin-left: 2em; }
   #tiki-installer .nav {
     margin-left: 1em; }
-    #tiki-installer .nav .nav-item {
-      color: white;
-      line-height: 2em; }
-      #tiki-installer .nav .nav-item .nav-link {
-        color: white;
-        padding: 0; }
-      #tiki-installer .nav .nav-item.active {
-        color: blue; }
-        #tiki-installer .nav .nav-item.active .nav-link {
-          color: blue; }
+  #tiki-installer .nav .nav-item {
+    color: white;
+    line-height: 2em; }
+  #tiki-installer .nav .nav-item .nav-link {
+    color: black;
+    padding: 0 5px; }
+  #tiki-installer .nav .nav-item.active {
+    color: blue; }
+  #tiki-installer .nav .nav-item.active .nav-link {
+    color: blue; }
   #tiki-installer .install-step8 .enter-tiki .btn {
     white-space: normal; }
 
